no longer adjusts list left-margin on mobile

--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -106,7 +106,6 @@
 @media (max-width: 767px) {
   .stat { display: none }
   h2 { font-size: 170% }
-  .single_list li { margin-left: -20px }
 
   #new_list{
     .settings{
